 - [DS-382] Proposal: Add 'dc.creator' to Author browse index by default
 - [DS-385] Packager script is unable to import the same METS + DIM package that was exported
 - [DS-386] Allow user to specify which <dmdSec> is used by the METS Ingester when importing METS from Packager script
 - [DS-398] Submission license displayed on collection and item homepage (XMLUI)

(Tim Donohue / Andrea Bollini)
 - [DS-228] Community Admin XMLUI: Delegated Admins Patch

(Ben Bosman)
 - [DS-392] Error messages in the submission do not disappear if e.g. one of the two errors are solved
 - [DS-381] community and collection homepage
 - [DS-310] UTF-8 encoding in community and collection text
 - [DS-307] Offer access in AbstractSearch to QueryResults for subclasses
 - [DS-306] Option to disable mailserver
 - [DS-226] confirmation page of edit profile has an invalid link
 - [DS-247] Update of contribution of @MIRE Solr Based Statistics Engine to DSpace.

(OhioLINK)
 - [DS-225] dc.description.provenance - public display

(Yin Yin Latt / Stuart Lewis)
 - [DS-205] Creative Commons - option to set legal jurisdiction

(Fabio Kepler / Steve Williams)
 - [DS-258] Item View Thumbnails not displaying in XMLUI

(Van Ly)
 - [DS-291] README update for top level of dspace 1.6.0 package directory

(Graham Triggs)
 - [DS-299] Allow long values to be specified for the max upload request (> 2GB uploads)
 - [DS-344] Fix problem where apostrophe in email address would stop EPerson being selected
 - [DS-359] Add alternate file appender for log4j

(Mark Wood)
 - [DS-52] Factor out common webapp installation - ID: 2042160

(Ekaterina Pechekhonova)
 - [DS-330] Create new session on login / invalidate sessions on logout

(Richard Rodgers)
 - [DS-324] Add OpenSearch support

(Toni Prieto)
 - [DS-356] Antispam for suggest item feature

(Flavio Botelho)
 - [DS-246] Fix configurable browse parameter encoding (XMLUI)
 - [DS-320] java.util.NoSuchElementException: Timeout waiting for idle object