@@ -1489,7 +1489,7 @@
 	<message key="xmlui.administrative.collection.EditCollectionMetadataForm.label_name">Name</message>
 	<message key="xmlui.administrative.collection.EditCollectionMetadataForm.label_short_description">Short Description</message>
 	<message key="xmlui.administrative.collection.EditCollectionMetadataForm.label_introductory_text">Introductory text (HTML)</message>
-	<message key="xmlui.administrative.collection.EditCollectionMetadataForm.label_copyright_text">Copyright text (plain text)</message>
+	<message key="xmlui.administrative.collection.EditCollectionMetadataForm.label_copyright_text">Copyright text (HTML)</message>
 	<message key="xmlui.administrative.collection.EditCollectionMetadataForm.label_side_bar_text">News (HTML)</message>
 	<message key="xmlui.administrative.collection.EditCollectionMetadataForm.label_license">License</message>
 	<message key="xmlui.administrative.collection.EditCollectionMetadataForm.label_provenance_description">Provenance</message>
@@ -1620,7 +1620,7 @@
 	<message key="xmlui.administrative.community.EditCommunityMetadataForm.label_name">Name</message>
 	<message key="xmlui.administrative.community.EditCommunityMetadataForm.label_short_description">Short Description</message>
 	<message key="xmlui.administrative.community.EditCommunityMetadataForm.label_introductory_text">Introductory text (HTML)</message>
-	<message key="xmlui.administrative.community.EditCommunityMetadataForm.label_copyright_text">Copyright text (plain text)</message>
+	<message key="xmlui.administrative.community.EditCommunityMetadataForm.label_copyright_text">Copyright text (HTML)</message>
 	<message key="xmlui.administrative.community.EditCommunityMetadataForm.label_side_bar_text">News (HTML)</message>
 	<message key="xmlui.administrative.community.EditCommunityMetadataForm.label_logo">Upload new logo</message>
 	<message key="xmlui.administrative.community.EditCommunityMetadataForm.label_existing_logo">Current logo</message>
