@@ -144,6 +144,7 @@
  - [DS-385] Packager script is unable to import the same METS + DIM package that was exported
  - [DS-386] Allow user to specify which <dmdSec> is used by the METS Ingester when importing METS from Packager script
  - [DS-398] Submission license displayed on collection and item homepage (XMLUI)
+ - [DS-399] Special characters in collection license lead to parse error (XMLUI)
 
 (Tim Donohue / Andrea Bollini)
  - [DS-228] Community Admin XMLUI: Delegated Admins Patch
